<resources>
    <string name="app_name">Shoe Store</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login with and Existing Account</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_go_to_store">Go to Store</string>
    <string name="action_go_to_instructions">Go to Instructions</string>
    <string name="instructions_tip">Click The Button to go to the Instruction Page</string>
    <string name="shoe_store_welcome">Welcome To ShoeStore!</string>
    <string name="user_guide">User Guide</string>
    <string name="user_guide_text">This Application is going to enable the user to look through different types of shoes</string>
    <string name="floating_action_content_description">Add New Shoe</string>
    <string name="logout">Logout</string>
    <string name="save_action">Save</string>
    <string name="label_name">Shoe Name</string>
    <string name="label_company">Shoe Company</string>
    <string name="label_size">Shoe Size</string>
    <string name="label_desc">Shoe Description</string>
    <string name="hint_name">e.g Air Max</string>
    <string name="hint_company">e.g Nike</string>
    <string name="hint_size">e.g 10.5</string>
    <string name="hint_desc">e.g bla bla</string>
    <string name="extended_fab_label">New Shoe</string>
</resources>